--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "To Learn RestAPI in Node",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon run app.js"
+    "start": "node app.js"
   },
   "author": "Shilakant Jha",
   "license": "ISC",
